making app better

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -27,10 +27,10 @@
                 Get your film or script submitted to be part of the fun.
             </p>
             <div style="text-align: center;">
-                <app-button [routerLink]="['/tickets']" [name]="'Venue'"></app-button>
-                <app-button [routerLink]="['/awards']" [name]="'Awards'"></app-button>
-                <app-button [routerLink]="['/people']" [name]="'Staff'"></app-button>
-                <app-button [routerLink]="['/help-wanted']" [name]="'Help Wanted'"></app-button>
+                <app-button [routerLink]="['/tickets']" [name]="'Venue'"></app-button>&nbsp;
+                <app-button [routerLink]="['/awards']" [name]="'Awards'"></app-button>&nbsp;
+                <app-button [routerLink]="['/people']" [name]="'Staff'"></app-button>&nbsp;
+                <app-button [routerLink]="['/help-wanted']" [name]="'Help Wanted'"></app-button>&nbsp;
                 <app-button [routerLink]="['/contact']" [name]="'Contact Us'"></app-button>
             </div>
         </div>
