--- a/src/app/submit-film/submit-film.component.html
+++ b/src/app/submit-film/submit-film.component.html
@@ -13,7 +13,8 @@
                     <div class="borderClass">
                         <div class="titleCLass">Rules for Submitting Films</div>
                         <div class="listClass">
-                            <li>Shorts only. Film must be between 4 and 30 minutes.</li>
+                            <li>Submissions open January 1st through June 30th</li>
+                            <li>Shorts only. Film must be between 3 and 30 minutes.</li>
                             <li>Anyone is eligible to submit.</li>
                             <li>Any type of film can be submitted.</li>
                             <li>Click the Flim Freeway button below to submit</li>
@@ -24,27 +25,27 @@
 
                     <table class="drTable" border="0">
                         <tr>
-                            <td colspan="4" class="titleCLass">Submitting Schedule</td>
+                            <td colspan="4" class="titleCLass">Submitting Types</td>
                         </tr>
                         <tr>
                             <th>Type</th>
-                            <th>End Date</th>
+                            <th>Details</th>
                             <th>Cost</th>
                         </tr>
                         <tr>
-                            <td>Early Bird</td>
-                            <td>Jan 31st</td>
-                            <td>$20</td>
-                        </tr>
-                        <tr>
-                            <td>Regular</td>
-                            <td>June 1st</td>
+                            <td>Short Film</td>
+                            <td>3 min to 30 min</td>
                             <td>$30</td>
                         </tr>
                         <tr>
-                            <td>Late</td>
-                            <td>June 30th</td>
-                            <td>$40</td>
+                            <td>Trailer</td>
+                            <td>up to 3 min</td>
+                            <td>$15</td>
+                        </tr>
+                        <tr>
+                            <td>Detailed Review</td>
+                            <td>Comprehensive written reviews</td>
+                            <td>$30</td>
                         </tr>
                     </table>
                     <div *ngIf="currentMonth <= 6" class="blueTitle">Click button below to submit</div>
