--- a/src/app/tickets/tickets.component.html
+++ b/src/app/tickets/tickets.component.html
@@ -14,17 +14,17 @@
                 <div class="borderClass">
                     <div class="titleCLass">Location Details</div>
                     <div class="listClass">
-                        <li> Saturday September 17, 2022</li>
-                        <li> Lynnwood Convention Center</li>
+                        <li> Saturday September 9, 2023</li>
+                        <li> Shoreline Community College</li>
                         <li> Time: 3pm - 8pm</li>
                         <li> Cost: $12</li>
                         <li> # Films: 30</li>
                     </div>
                     <div style="text-align: center;">
 
-                        <div>Lynnwood Convention Center</div>
-                        <div>3711 196th St SW</div>
-                        <div>Lynnwood, WA 98036 </div>
+                        <div>Shoreline Community College</div>
+                        <div>16101 Greenwood Ave N</div>
+                        <div>Shoreline, WA 98133 </div>
                     </div>
                 </div>
 
