trying to make it better

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -13,11 +13,8 @@
                 their work and receive regognition for their achievements. Snohomish Film Festival aims to build and
                 foster community connections and help build a stronger film community in Washington State.
             </p>
-            <p> Due to Covid, this will be an online festival Saturday September 18, 2021
-                from 3pm - 8pm. We hope to see all of you there.
-            </p>
             <p>
-                Short films of any kind can be submitted starting October 1st, 2020. We accept films of any genre and
+                Short films of any kind can be submitted starting January 1st. We accept films of any genre and
                 guarantee to
                 give the film makers written feedback from a number of local film insiders.
             </p>
