--- a/src/app/festival-page/festival-page.component.html
+++ b/src/app/festival-page/festival-page.component.html
@@ -29,11 +29,12 @@
                             <div>Festival Online Only</div>
                         </div>
                         <div *ngIf="filmYear!=2021">
-                            <div style="font-size: 22px; font-weight: 700;">Saturday September 17th</div>
-                            <div>3pm - 8pm</div>
-                            <div>Lynnwood Convention Center</div>
-                            <div>3711 196th St SW</div>
-                            <div>Lynnwood, WA 98036 </div>
+                            <div style="font-size: 22px; font-weight: 700;">Saturday September 9th</div>
+                            <div>3pm - 10pm</div>
+                            <div>Shoreline Community College</div>
+                            <div>16101 Greenwood Ave N</div>
+                            <div>Shoreline, WA 98133 </div>
+                            <div>Theater Building 1600 Bldg</div>
                         </div>
 
                         <div style="text-align: center;">
